[gd_scene load_steps=7 format=3 uid="uid://dk5vffsyvnfyd"]

[ext_resource type="Script" path="res://Entities/enemies/enemy.gd" id="1_j0mn5"]
[ext_resource type="PackedScene" uid="uid://cjsbj2qp2hca2" path="res://Entities/tools/draw_layer.tscn" id="2_i21vs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dw8k"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4i5v4"]
radius = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j7mfs"]
radius = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ihjm"]
size = Vector2(52, 52)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_j0mn5")

[node name="Status" type="Node2D" parent="."]

[node name="MaxHealth" type="ColorRect" parent="Status"]
offset_left = -22.0
offset_top = -38.0
offset_right = 22.0
offset_bottom = -34.0
color = Color(1, 0, 0, 1)

[node name="Health" type="ColorRect" parent="Status"]
offset_left = -22.0
offset_top = -38.0
offset_right = 22.0
offset_bottom = -34.0
color = Color(0, 1, 0.233333, 1)

[node name="DrawLayer" parent="." instance=ExtResource("2_i21vs")]

[node name="ColorRect" type="ColorRect" parent="DrawLayer"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5dw8k")

[node name="GrappleHitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrappleHitbox"]
shape = SubResource("CircleShape2D_4i5v4")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy", "hitbox"]]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_j7mfs")

[node name="Clickbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickbox"]
shape = SubResource("RectangleShape2D_2ihjm")
debug_color = Color(0.68126, 0.69, 0.1656, 0.419608)

[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_hitbox_area_shape_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
